--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,31 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home-work 11</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" />
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" />
-
-  <link rel="stylesheet" href="./css/common.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <title>Searh Photo</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/reset.css">
 </head>
 
 <body>
-  <form class="js-search search">
-    <input class="input-search" name="search" type="text" />
-    <button class="btn-search" type="submit">Search</button>
+  <form action="submit" class="search-form">
+    <div class="form-box">
+      <label for="images" class="label"></label>
+      <input type="text" class="search-images" name="images" placeholder="Search images..." required>
+    </div>
+    <button class="search-button" type="submit">Search</button>
   </form>
-  <div class="container">
-    <span class="loader"></span>
-    <ul class="gallery"></ul>
-  </div>
+  <span class="loader"></span>
+
+  <div class="gallery"></div>
+
 
   <script type="module" src="./main.js"></script>
+  <script type="module" src="./js/pixabay-api.js"></script>
+  <script type="module" src="./js/render-functions.js"></script>
+  <script src="iziToast.min.js" type="javascript"></script>
 </body>
 
 </html>
